--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ setenv =
 
 commands =
     pip install -U pip
-    pytest --basetemp={envtmpdir}
+    py.test --basetemp={envtmpdir}
 
 deps =
     -r{toxinidir}/requirements.txt
