--- a/.cookiecutter.yaml
+++ b/.cookiecutter.yaml
@@ -6,8 +6,6 @@ default_context:
   project_namespace: aibs
   project_short_description: Creates the pink noise stimuli used in the noise1, noise2, and ramp to rheo stimulus used in the Allen Institute for Brain Science electrophysiology pipeline.
   project_slug: ephys_pink_noise
-  stash_url: http://stash.corp.alleninstitute.org/scm/~corinnet/aibs.ephys_pink_noise
-  template: http://jedp@stash.corp.alleninstitute.org/scm/~jedp/pyproject_template.git
+  repo_url: https://github.com/AllenInstitute/aibs.ephys_pink_noise
   user_name: corinnet
   version: 0.1.0
-  
